<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">团购</string>
    <string name="lauching">正在启动</string>
    <string name="waiting">请稍候...</string>
    <string name="server_progress">正在获取服务器资源...</string>
    <string name="login_progress">正在登录...</string>
    <string name="check_local_folder_progress">正在检查本地文件...</string>
    <string name="check_update_progress">正在检查更新...</string>
    <string name="update_in_progress">正在更新文件...</string>
    <string name="new_apk_title">检查到更新</string>
    <string name="new_apk_text">团购大全有新的版本可用，是否下载更新？</string>
    <string name="daily_deals">正在团购</string>
    <string name="nearby_deals">定位团购</string>
    <string name="my_deals">个人中心</string>
    <string name="favorite">收藏</string>
    <string name="bought">已买</string>
    <string name="more_options">更多</string>
    <string name="deal_details">团购详情</string>
    <string name="deal_comments">用户评论</string>
    <string name="deal_shops">商铺信息</string>
    <string name="web_loading">内容获取中，请稍候…</string>
    <string name="http_600_error">无法连接服务器：</string>
    <string name="dlg_title_default">团购大全</string>
    <string name="dlg_positive">确定</string>
    <string name="dlg_negative">取消</string>
    <string name="username">用户名</string>
    <string name="username_hint">同时作为您的昵称</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入您的密码</string>
    <string name="password_conformation">确认密码</string>
    <string name="password_conformation_hint">请重复输入一次密码</string>
    <string name="email">电子邮箱</string>
    <string name="email_hint">稍候将会收到激活邮件</string>
    <string name="captcha_hint">请输入左图显示的字符</string>
    <string name="subscribe">提供专业团购信息</string>
    <string name="signup">注册</string>
    <string name="signup_title">注册</string>
    <string name="activate_complete">已完成激活</string>
    <string name="reactivate">再次发送激活邮件</string>
    <string name="reactivate_title">激活您的账户</string>
    <string name="reactivate_desc">"激活邮件已经发往您的邮箱，请点击邮件中的链接来完成注册。"</string>
    <string name="login_title">登陆</string>
    <string name="logout_title">退出登陆</string>
    <string name="about">关于我们</string>
    <string name="switch_city_title">切换城市</string>
    <string name="show_images">显示图片</string>
    <string name="hide_images">隐藏图片</string>
    <string name="reg">" "<a>没有帐号？快速免费注册</a>" "</string>
    <string name="on_location">正在定位...</string>
</resources>
