<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:stretchColumns="1">
        <TableRow>
            <TextView android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="40.0dip" android:text="@string/username" />
            <EditText android:id="@+id/edtUsername" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/username_hint" android:layout_weight="1.0" android:inputType="text" />
        </TableRow>
        <TableRow>
            <TextView android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password" />
            <EditText android:id="@+id/edtPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/password_hint" android:password="true" android:layout_weight="1.0" android:inputType="textPassword" />
        </TableRow>
        <TableRow>
            <TextView android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password_conformation" />
            <EditText android:id="@+id/edtPasswordConformation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/password_conformation_hint" android:password="true" android:layout_weight="1.0" android:inputType="textPassword" />
        </TableRow>
        <TableRow>
            <TextView android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="40.0dip" android:text="@string/email" />
            <EditText android:id="@+id/edtEmail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/email_hint" android:layout_weight="1.0" android:inputType="textEmailAddress" />
        </TableRow>
        <TableRow>
            <ImageView android:layout_gravity="center" android:id="@+id/imgCaptcha" android:layout_width="110.0px" android:layout_height="wrap_content" android:src="@drawable/img_loading_small" android:scaleType="centerInside" android:maxHeight="50.0px" />
            <EditText android:id="@+id/edtCaptcha" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/captcha_hint" android:layout_weight="1.0" android:inputType="text" />
        </TableRow>
        <TableRow>
            <CheckBox android:gravity="center" android:id="@+id/chkSubscribe" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:layout_span="2" android:text="@string/subscribe" />
        </TableRow>
        <TableRow>
            <Button android:id="@+id/btnSignup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_span="2" android:text="@string/signup" />
        </TableRow>
    </TableLayout>
</ScrollView>
