<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:stretchColumns="1">
        <TableRow>
            <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:autoLink="all" android:linksClickable="true" android:id="@+id/txtLoginDesc" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_span="2" android:text="" />
        </TableRow>
        <TableRow>
            <TextView android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="40.0dip" android:text="@string/username" />
            <EditText android:id="@+id/edtUsername" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:inputType="text" />
        </TableRow>
        <TableRow>
            <TextView android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password" />
            <EditText android:id="@+id/edtPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:password="true" android:layout_weight="1.0" android:inputType="textPassword" />
        </TableRow>
        <TableRow>
            <TextView android:textSize="18.0sp" android:textColor="#ff668899" android:gravity="center" android:autoLink="all" android:linksClickable="true" android:id="@+id/txtReg" android:padding="10.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_span="2" android:text="@string/reg" />
        </TableRow>
        <TableRow>
            <Button android:id="@+id/btnLogin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_span="2" android:text="@string/login_title" />
        </TableRow>
    </TableLayout>
</ScrollView>
